<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="18dp">

    <EditText
        android:id="@+id/inputUnderlying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auto_hint_ddfc5c805a"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/inputExpiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/auto_hint_ab7388087b"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputSymbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/auto_hint_517578322a"
        android:inputType="textCapCharacters" />

    <Spinner
        android:id="@+id/inputProvider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp" />
</LinearLayout>
